A giant pile of CMake fixes for Windows build support
- Add HAVE_WINDOWS and HAVE_MVSC and set minimum MSVC toolset version to
  143 (MSVC 2022)
- Require C++20 on MSVC. MSVC doesn't support designated initializers
  under C++17 like clang and gcc do, so we need to bump up a version.
- Set UUID_USING_CXX20_SPAN option to ON for the same reasons.
- Fix how the HAVE_POSIX flag is set so it gets set in code correctly.
- Disable some compiler flags getting set that aren't valid for MSVC.
- Add a flag that disables the min/max macros in MSVC that breaks the
  std versions of those methods.
- Set SPDLOG_WCHAR_TO_UTF8_SUPPORT so that we can pass wstrings to fmt()
  when it was originally included by spdlog.
- Fix flags passed for AddressSanitizer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,13 +74,19 @@ endif ()
 
 ### Platform-specific code.
 
-set(HAVE_POSIX $<bool:${UNIX}>)
+if (UNIX)
+  set(HAVE_POSIX true)
+else()
+  set(HAVE_POSIX false)
+endif()
 
 if ( CMAKE_SYSTEM_NAME STREQUAL "Darwin" )
     require_version("maccOS" True ${CMAKE_SYSTEM_VERSION} "${macos_minimum_version}" true)
     set(HAVE_DARWIN true)
 elseif ( CMAKE_SYSTEM_NAME STREQUAL "Linux" )
     set(HAVE_LINUX true)
+elseif ( CMAKE_SYSTEM_NAME STREQUAL "Windows" )
+    set(HAVE_WINDOWS true)
 else ()
     message(FATAL_ERROR "unknown platform, supporting only Linux and macOS currently")
 endif()
