--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -2,6 +2,19 @@
 set(SPDLOG_FMT_EXTERNAL ON)
 option(UUID_BUILD_TESTS "Build the unit tests" OFF)
 
+if ( WIN32 )
+  # We use C++20 on MSVC, which means we have full std::span support on that
+  # platform
+  option(UUID_USING_CXX20_SPAN "Using span from std instead of gsl" ON)
+
+  # std::filesystem returns everything as UTF8 on Windows which means any call
+  # to native() returns a std::wstring or a wchar_t. We need to trigger the
+  # inclusion of fmt/xchar.h so that there's support for wide characters in
+  # fmtlib when it includes it.
+  set(SPDLOG_WCHAR_FILENAMES ON)
+  set(SPDLOG_WCHAR_SUPPORT ON)
+endif()
+
 add_subdirectory(doctest EXCLUDE_FROM_ALL)
 add_subdirectory(filesystem EXCLUDE_FROM_ALL)
 add_subdirectory(fmt EXCLUDE_FROM_ALL)
