--- a/src/config.h.in
+++ b/src/config.h.in
@@ -5,6 +5,7 @@
 #cmakedefine HAVE_POSIX
 #cmakedefine HAVE_DARWIN
 #cmakedefine HAVE_LINUX
+#cmakedefine HAVE_WINDOWS
 #cmakedefine HAVE_GCC
 #cmakedefine HAVE_CLANG
 
