--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -77,6 +77,7 @@ add_executable(zeek-agent main.cc)
 
 add_subdirectory(core)
 add_subdirectory(io)
+add_subdirectory(platform)
 add_subdirectory(tables)
 add_subdirectory(util)
 
