Bring over bsd-getopt-long from Zeek

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -67,3 +67,9 @@ if ( HAVE_LINUX )
     add_subdirectory(pfs EXCLUDE_FROM_ALL)
     target_include_directories(pfs PUBLIC pfs/include)
 endif()
+
+if ( NOT HAVE_GETOPT_LONG )
+    add_library(3rdparty STATIC bsd-getopt-long.c)
+    target_include_directories(pathfind PUBLIC .)
+    add_library(3rdparty:3rdparty ALIAS 3rdparty)
+endif()
