--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 include(CheckCompiler)
+include(CheckFunctions)
 
 if ( NOT WIN32 )
     if ( CMAKE_BUILD_TYPE STREQUAL "Debug" )
@@ -96,6 +97,10 @@ target_link_libraries(zeek-agent PRIVATE spdlog::spdlog)
 target_link_libraries(zeek-agent PRIVATE sqlite::sqlite)
 target_link_libraries(zeek-agent PRIVATE stduuid)
 target_link_libraries(zeek-agent PRIVATE tomlplusplus::tomlplusplus)
+
+if ( NOT HAVE_GETOPT_LONG )
+    target_link_libraries(zeek-agent PRIVATE 3rdparty:3rdparty)
+endif()
 
 install(TARGETS zeek-agent)
 
