--- a/src/tables/sockets/CMakeLists.txt
+++ b/src/tables/sockets/CMakeLists.txt
@@ -9,3 +9,7 @@ endif ()
 if ( HAVE_LINUX )
     target_sources(zeek-agent PRIVATE sockets.linux.cc)
 endif ()
+
+if ( WIN32 )
+    target_sources(zeek-agent PRIVATE sockets.windows.cc)
+endif ()
