--- a/src/tables/system_logs/CMakeLists.txt
+++ b/src/tables/system_logs/CMakeLists.txt
@@ -11,3 +11,7 @@ endif ()
 if ( HAVE_LINUX )
     target_sources(zeek-agent PRIVATE system_logs.linux.cc)
 endif ()
+
+if ( WIN32 )
+    target_sources(zeek-agent PRIVATE system_logs.windows.cc)
+endif ()
