Add `files_columns` table.

--- a/src/tables/files/CMakeLists.txt
+++ b/src/tables/files/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Copyright (c) 2021 by the Zeek Project. See LICENSE for details.
 
-target_sources(zeek-agent PRIVATE files.test.cc)
+target_sources(zeek-agent PRIVATE files.cc)
 
 if ( HAVE_POSIX )
     target_sources(zeek-agent PRIVATE files.posix.cc)
