--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -89,6 +89,7 @@ target_link_libraries(zeek-agent PRIVATE doctest::doctest)
 target_link_libraries(zeek-agent PRIVATE fmt::fmt)
 target_link_libraries(zeek-agent PRIVATE ghcFilesystem::ghc_filesystem)
 target_link_libraries(zeek-agent PRIVATE nlohmann_json)
+target_link_libraries(zeek-agent PRIVATE ixwebsocket::ixwebsocket)
 target_link_libraries(zeek-agent PRIVATE pathfind::pathfind)
 target_link_libraries(zeek-agent PRIVATE replxx::replxx)
 target_link_libraries(zeek-agent PRIVATE reproc++)
