--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "zeek-agent"]
 	path = zeek-agent
 	url = https://github.com/zeek-packages/zeek-agent-v2
+[submodule "3rdparty/out_ptr"]
+	path = 3rdparty/out_ptr
+	url = https://github.com/soasis/out_ptr
