--- a/src/tables/sockets/CMakeLists.txt
+++ b/src/tables/sockets/CMakeLists.txt
@@ -10,6 +10,6 @@ if ( HAVE_LINUX )
     target_sources(zeek-agent PRIVATE sockets.linux.cc)
 endif ()
 
-if ( WIN32 )
+if ( HAVE_WINDOWS )
     target_sources(zeek-agent PRIVATE sockets.windows.cc)
 endif ()
