--- a/src/tables/users/CMakeLists.txt
+++ b/src/tables/users/CMakeLists.txt
@@ -12,6 +12,6 @@ if ( HAVE_LINUX )
     target_link_libraries(zeek-agent PRIVATE pfs)
 endif ()
 
-if ( WIN32 )
+if ( HAVE_WINDOWS )
     target_sources(zeek-agent PRIVATE users.windows.cc)
 endif ()
