--- a/src/config.h.in
+++ b/src/config.h.in
@@ -8,6 +8,7 @@
 #cmakedefine HAVE_WINDOWS
 #cmakedefine HAVE_GCC
 #cmakedefine HAVE_CLANG
+#cmakedefine HAVE_MSVC
 #cmakedefine HAVE_GETOPT_LONG
 
 namespace zeek::agent {
@@ -15,4 +16,4 @@ inline const auto Version = "${ZEEK_AGENT_VERSION}";
 inline const auto VersionLong = "${ZEEK_AGENT_VERSION_LONG}";
 inline const auto InstallLibDir = "${CMAKE_INSTALL_LIBDIR}";
 inline const auto InstallPrefix = "${CMAKE_INSTALL_PREFIX}";
-}
+} // namespace zeek::agent
