Create installer package for macOS (`.pkg`).
We create this manually from the app bundle that CPack puts together.
CPack's `productbuild` generator isn't work well (buggy and hard
parameterize.)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -185,7 +185,10 @@ jobs:
       - name: Package (with codesign)
         if: github.ref == 'refs/heads/main' || (startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-dev'))
         env:
-          CPACK_BUNDLE_APPLE_CERT_APP: ${{ secrets.MACOS_CERTIFICATE_ID }}
+          MACOS_CERTIFICATE_APPLICATION_ID: ${{ secrets.MACOS_CERTIFICATE_APPLICATION_ID }}
+          MACOS_NOTARIZATION_USER: ${{ secrets.MACOS_NOTARIZATION_USER }}
+          MACOS_NOTARIZATION_PASSWORD: ${{ secrets.MACOS_NOTARIZATION_PASSWORD }}
+
         run: |
           test -n "${CPACK_BUNDLE_APPLE_CERT_APP}" || (echo "Codesign certificate not set" >&2; false)
           ninja -C build package
